fix landing h1 overflow

--- a/style.css
+++ b/style.css
@@ -82,7 +82,6 @@ body {
   }
 /* nav menu button */
   .menu-btn {
-    position: relative;
     display: none;
     justify-content: center;
     align-items: center;
@@ -114,16 +113,6 @@ body {
   .menu-btn__lines::after {
     transform: translateY(0.5rem);
   }
-.menu-btn {
-    position: relative;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    width: 1.5rem;
-    height: 1.5rem;
-    cursor: pointer;
-    z-index: 1;
-}
 hr {
     margin-top: 0 !important;
     margin-bottom: 0.5rem !important;
@@ -137,6 +126,10 @@ background-color: #13a1df;
 .landing-heading {
     text-align: center;
     text-transform: capitalize;
+}
+
+.landing-heading h1 {
+  overflow: hidden;
 }
 
 .text {
@@ -348,20 +341,16 @@ background-color: #13a1df;
 
 
 /** For mobile devices **/
-@media (max-width: 767px) {
-
-  
+@media (max-width: 767px) {  
     .header a {
       font-size: 1rem;
-    }
-  
+    }  
     .menu-btn {
       display: flex;
-    }
-  
+    }  
     .menu-items {
       flex-direction: column;
-      justify-content: space-around;
+      justify-content: center;
       position: absolute;
       top: 0;
       right: 0;
@@ -369,27 +358,22 @@ background-color: #13a1df;
       height: 100vh;
       transform: translateX(100vw);
       background: rgb(19,161,223);
-background: linear-gradient(0deg, rgba(19,161,223,1) 0%, rgba(3,102,178,1) 36%);
+      background: linear-gradient(0deg, rgba(19,161,223,1) 0%, rgba(3,102,178,1) 36%);
       transition: transform 0.3s ease-in-out;
+      padding: 0;
     }
   
     .menu-items.open {
       transform: translate(0);
     }
-  
-    .menu-items li {
-      width: 100vw;
-      height: 100%;
-    }
-  
+
     .menu-items li a {
       color: #ffffff;
-      font-size: 5vh;
+      font-size: 2rem;
       display: flex;
       justify-content: center;
       align-items: center;
       width: 100%;
-      height: 100%;
     }
   
     .menu-items li a:hover {
